maze.pledge.PledgeMaze.scala.error
Compilation error:
PledgeMaze:18: error: reassignment to val
    c=c-1
     ^PledgeMaze:22: error: reassignment to val
    c=c+1
     ^PledgeMaze:25: error: reassignment to val
      c=c+1
       ^