maze.pledge.PledgeMaze.scala.code
override def run() {
  var sommeAngle:Int=0
  setDirection(Direction.NORTH)  
  while(!estSurBiscuit()){
    while (!estFaceMur() && getDirection()==Direction.NORTH){
      avance()
    }
      do {keepHandOnSideWall(sommeAngle)} while(sommeAngle!=0 && !isDirectionFree(Direction.NORTH))
    }
  }
  prendBiscuit()


def keepHandOnSideWall(c:Int):Int ={
  if (estFaceMur()){
    droite()
    c=c-1
  }
  else {
    avance();gauche()
    c=c+1
    while (!estFaceMur()){
      avance();gauche()
      c=c+1
    }
    droite()
  }
  return c
}

def isDirectionFree(dir:Direction):Boolean ={
  var d:Direction=getDirection()
  setDirection(dir)
  if(estFaceMur()){
    setDirection(d)
    return false
  }
  else {
    setDirection(d)
    return true
  }
}